<resources>
    <string name="app_name">AJEO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="ultima_puja">Ultima puja:</string>
    <string name="precio_inicial">Precio inicial</string>
    <string name="raza">Raza:</string>
    <string name="peso">Peso:</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha:</string>
    <string name="precio">Precio:</string>
    <string name="detalles_del_vendedor">Detalles del vendedor:</string>
    <string name="tus_datos">Tus datos</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo:</string>
    <string name="guardar">Guardar</string>
    <string name="subastar">Subastar</string>
    <string name="titulo">Titulo</string>
    <string name="peso_en_libras">Peso en libras</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena">Contraseña</string>
    <string name="publicar">Publicar</string>
    <string name="ganador">Ganador:</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="pujar">Pujar</string>
    <string name="ingrese_el_monto_a_ofertar">Ingrese el monto a ofertar</string>
    <string name="numero">Numero</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>

</resources>