<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PublicarFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewPubli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >



            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:fontFamily="@font/urbanistbold"
                android:text="@string/publicar"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewImg"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="300dp"
                    android:background="@drawable/ic_round_photo_camera_back_24"

                    />


                <androidx.cardview.widget.CardView
                    android:layout_gravity="right"
                    android:layout_marginTop="-60dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="250dp"
                    android:elevation="100dp"
                    app:cardElevation="8dp"
                    android:background="@color/ColorAjeo"
                    android:backgroundTint="@color/ColorAjeo"
                    app:cardBackgroundColor="@color/white">

                    <ImageButton
                        android:id="@+id/imgBtn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/ic_round_add_24"
                        android:visibility="visible"
                        />

                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayoutTitulo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/urbanistbold"



                    android:hint="@string/titulo"
                    app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion"
                    app:layout_constraintVertical_bias="0.15"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputEditTextTitulo"
                        counterMaxLength="50"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:maxLength="30"

                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanistbold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContraseña" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="20dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayoutDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/urbanistbold"


                    android:hint="@string/descripcion"
                    app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion"
                    app:layout_constraintVertical_bias="0.15"
                    app:startIconDrawable="@drawable/ic_round_text_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputEditTextDescripcion"
                        counterMaxLength="200"
                        android:layout_width="match_parent"
                        android:maxLines="10"
                        android:maxLength="300"
                        android:minHeight="100dp"
                        android:autoSizeMaxTextSize="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanistbold"
                        android:inputType="textMultiLine"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContraseña" />

                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="20dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayoutPrecio"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/urbanistbold"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"

                    android:hint="@string/precio"
                    app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion"
                    app:layout_constraintVertical_bias="0.15"
                    app:startIconDrawable="@drawable/ic_round_text_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputEditTextPrecio"
                        counterMaxLength="10"
                        android:layout_width="match_parent"

                        android:maxLines="1"
                        android:maxLength="10"
                        android:layout_height="50dp"
                        android:fontFamily="@font/urbanistbold"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContraseña" />

                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinnerRaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:minHeight="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:inputType="none"
                    android:id="@+id/TextInputLayoutRaza"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:fontFamily="@font/urbanistbold"
                    app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion"
                    app:layout_constraintVertical_bias="0.15"
                    app:startIconDrawable="@drawable/ic_person">

                    <AutoCompleteTextView
                        android:inputType="none"
                        android:editable="false"

                        android:id="@+id/autoCompleteTextViewRaza"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/raza"
                        android:fontFamily="@font/urbanistbold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContraseña" />

                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputLayoutPeso"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/urbanistbold"


                        android:hint="@string/peso_en_libras"
                        app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion"
                        app:layout_constraintVertical_bias="0.15"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/TextInputEditTextPeso"
                            counterMaxLength="50"
                            android:layout_width="match_parent"
                            android:maxLines="1"
                            android:maxLength="30"
                            android:inputType="number"

                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanistbold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContraseña" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPublicar"
                android:layout_gravity="center_horizontal"
                android:layout_width="277dp"
                android:layout_height="53dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/urbanistbold"
                android:text="@string/publicar"
                android:textSize="15dp"

                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                />




            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>